# GTSim

./: .gitignore  README.md  pyproject.toml
configs/: TEMPLATE.toml  mark1.toml
docs/: CONFIGURING_SURVEYS.md  PLAN.md
scripts/: mapmaker_test.py  measure_1f_noise.py  noise_test.py  pointing_test.py  regrid_haslam_tod.py  run_pipeline.py  sky_model_test.py
src/gtsim/: __init__.py  __main__.py  cli.py  config.py  mapmaker.py  noise.py  pipeline.py  scan.py  site.py  sky.py
